--- a/CV-Hemsida/CV - css/homepage.css
+++ b/CV-Hemsida/CV - css/homepage.css
@@ -17,7 +17,7 @@
     margin: 0;
     padding: 10px;
 
-    Font-size: 30px;
+    Font-size: 25px;
 
     color: black;
 
@@ -32,5 +32,6 @@
 
     font-family: 'Oswald', sans-serif;
    
+    font-size: 35px;
 }
 
