--- a/CV-Hemsida/CV - css/courses.css
+++ b/CV-Hemsida/CV - css/courses.css
@@ -23,4 +23,13 @@
    
 }
 
+body {
+    background-image:url("https://www.atypicalfinance.com/wp-content/uploads/2018/10/Homepage-background.jpg");
+    background-size:100%;
+    background-position: center;
+    background-repeat: repeat-y;
+    background-attachment: fixed;
+    background-size: cover;
+    
+}
 
