--- a/CV-Hemsida/CV - css/homepage.css
+++ b/CV-Hemsida/CV - css/homepage.css
@@ -35,3 +35,9 @@
     font-size: 35px;
 }
 
+.titel-2 {
+    display: flex;
+    justify-content: center;
+
+    font-family: 'Oswald', sans-serif;
+}
